tests/e2e/object_assign_int.error
Error: syntax error in story at line 2, column 5

2|        server = 1
          ^^^^^^^^^^

E0100: Can't assign `int` to `Object`
